# dino-runner

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  dino_game.py  install.sh  pyproject.toml
.github/workflows/: release.yml
dino_game/: __init__.py  agents.py  art.py  cli.py  competition.py  constants.py  engine.py  input.py  llm.py  llm_client.py  rendering.py  replay.py  runtime.py  sessions.py
docs/superpowers/plans/: 2026-05-27-llm-frame-window.md  2026-05-27-openai-responses-config.md  2026-05-27-pypi-pipx-packaging.md
docs/superpowers/specs/: 2026-05-27-llm-frame-window-design.md  2026-05-27-openai-responses-config-design.md  2026-05-27-pypi-pipx-packaging-design.md  2026-05-28-llm-loading-dino-ui-design.md
tests/: test___init__.py  test_agents.py  test_art.py  test_cli.py  test_competition.py  test_constants.py  test_engine.py  test_input.py  test_llm.py  test_llm_agent.py  test_llm_client.py  test_packaging.py  test_rendering.py  test_replay.py  test_runtime.py  test_sessions.py
