[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-dino-runner"
version = "0.1.0"
description = "A terminal Chrome dino runner with human, rule-agent, and LLM modes."
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
trex = "dino_game:cli"

[tool.setuptools]
py-modules = ["dino_game"]
