[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-dino-in-terminal"
version = "0.1.0"
description = "A terminal Chrome dino runner with human, rule-agent, and LLM modes."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "AI Dino in Terminal contributors" },
]
license = "MIT"
keywords = ["terminal", "game", "dino", "runner", "agent", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console :: Curses",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Games/Entertainment :: Arcade",
]

[project.urls]
Homepage = "https://github.com/bytedance/agents-competition"
Repository = "https://github.com/bytedance/agents-competition"
Issues = "https://github.com/bytedance/agents-competition/issues"

[project.scripts]
dino = "dino_game:cli"

[tool.setuptools]
py-modules = ["dino_game"]
