[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-dino-in-terminal"
version = "0.1.3"
description = "A terminal Chrome dino runner with human, rule-agent, and LLM modes."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "AI Dino in Terminal contributors" },
]
license = "MIT"
keywords = ["terminal", "game", "dino", "runner", "agent", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console :: Curses",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Games/Entertainment :: Arcade",
]

[project.urls]
Homepage = "https://github.com/adamwoohhh/agents-competition"
Repository = "https://github.com/adamwoohhh/agents-competition"
Issues = "https://github.com/adamwoohhh/agents-competition/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "twine>=6.0",
]

[project.scripts]
dino = "dino_game.cli:cli"

[tool.setuptools]
packages = ["dino_game"]
